# lili-core

./: .gitignore  README.md
lili_audio/: CMakeLists.txt  README.md  package.xml
lili_audio/action/: TTS.action
lili_audio/launch/: speech_recognition.launch  text_to_speech.launch
lili_audio/src/: speech_recog.py  text_to_speech.py
lili_bringup/: CMakeLists.txt  README.md  package.xml  robot.launch
lili_bringup/launch/: robot.launch  robot_3dsensor.launch  robot_lidar.launch
lili_bringup/launch/include/: 3dsensor.launch  lidar.launch
lili_description/: README.md  lili.urdf.xacro  package.xml
lili_description/urdf/: lili_lidar.urdf.xacro
lili_graphics/: CMakeLists.txt  README.md  package.xml
lili_graphics/launch/: lili_graphics.launch
lili_graphics/src/: lili_graphics.py
lili_navigation/: README.md  package.xml
lili_navigation/launch/: slam.launch
lili_storytelling/: README.md  package.xml
lili_storytelling/launch/: story_telling.launch
lili_storytelling/src/: dialog.py  interactive_story.py  lili_avatar.py  player.py  story.py  story_edge.py  story_node.py  story_telling.py  test_story.py  utility_funcs.py
lili_vision/: CMakeLists.txt  README.md  package.xml
lili_vision/launch/: vision.launch
lili_vision/src/: vision.py
